# fpse_project

./: README.md
text_manipulator/: bisect191787603.coverage  bisect232842451.coverage  bisect246347417.coverage  bisect257642769.coverage  bisect331660284.coverage  bisect33876278.coverage  bisect376161999.coverage  bisect389907498.coverage  bisect392544175.coverage  bisect40279152.coverage  bisect43583371.coverage  bisect437838708.coverage  bisect452002752.coverage  bisect512835019.coverage  bisect518368577.coverage  bisect566783208.coverage  bisect569214667.coverage  bisect581576936.coverage  bisect591614375.coverage  bisect609963389.coverage  bisect612444797.coverage  bisect616926899.coverage  bisect640727739.coverage  bisect642450665.coverage  bisect679551620.coverage  bisect706557495.coverage  bisect706728124.coverage  bisect746679880.coverage  bisect791347955.coverage  bisect79636936.coverage  bisect813919616.coverage  bisect863656440.coverage  bisect90328604.coverage  bisect973638130.coverage  dune  dune-project  hello  test2.txt
text_manipulator/_build/: .db  .digest-db  log
text_manipulator/_build/default/: text_manipulator.dune-package  text_manipulator.install
text_manipulator/_build/default/.dune/: configurator  configurator.v2
text_manipulator/_build/default/.utop/: utop.ml-gen
text_manipulator/_build/default/lib/: text_manipulator.cma  text_manipulator.cmxa  text_manipulator.cmxs
text_manipulator/_build/default/src/: basic_feature.cma  basic_feature.cmxa  basic_feature.cmxs  basic_feature.ml  basic_feature.pp.ml  basic_feature.pp.mli  bisect760076223.coverage  bisect885244169.coverage  delete.cma  delete.cmxa  delete.cmxs  delete.mli  delete.pp.ml  dune  (+66 more)
text_manipulator/_coverage/: index.html
text_manipulator/_coverage/src/: basic_feature.ml.html  delete.ml.html  diff_algo.ml.html  file_parse.ml.html  insert.ml.html  merge.ml.html  replace.ml.html  undo.ml.html
text_manipulator/_coverage/tests/: tests.ml.html
text_manipulator/lib/: dune
text_manipulator/src/: basic_feature.ml  basic_feature.mli  delete.ml  delete.mli  diff_algo.ml  diff_algo.mli  display.ml  display.mli  dune  example.txt  example_diff.txt  example_text.txt  file_parse.ml  file_parse.mli  merge.ml  merge.mli  read.mli  repl.ml  replace.mli  search.mli  test1.txt  test2.txt  text_manipulator.ml  text_manipulator.mli  undo.mli  write.ml
text_manipulator/test/: dune  test.ml
text_manipulator/tests/: dune  ocaml_pair_1.ml  ocaml_pair_2.ml  tests.ml  text_pair_2.txt
(+122 files in other folders)
