
(library
  (name read)
  (modules read)
  (libraries 
    core
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )

(library
  (name undo)
  (modules undo)
  (libraries 
    core
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )

(library
  (name replace)
  (modules replace)
  (libraries 
    core
    str
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )
(library
  (name write)
  (modules write)
  (libraries 
    core
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )
(library
  (name insert)
  (modules insert)
  (libraries 
    core
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )
(library
  (name delete)
  (modules delete)
  (libraries 
    core
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )

(library
  (name repl)
  (modules repl)
  (libraries 
    core
    write
    insert
    delete
    replace
    undo
    read
    diff_algo
    merge
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )

(library
  (name display)
  (modules display)
  (libraries 
    core)
  (preprocess (pps ppx_jane bisect_ppx))
 )

 (library
  (name diff_algo)
  (modules diff_algo)
  (libraries 
    core
    display)
  (preprocess (pps ppx_jane bisect_ppx))
 )

 (library
  (name merge)
  (modules merge)
  (libraries 
    core
    diff_algo)
  (preprocess (pps ppx_jane bisect_ppx))
 )


(executable
  (name text_manipulator)
  (modules text_manipulator)
  (libraries
    display
    core
    core_unix.command_unix
    str
    repl
    )
  (preprocess
    (pps ppx_jane)))