(library
  (name basic_feature)
  (modules basic_feature)
  (libraries 
    core
    str
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )


(library
  (name repl)
  (modules repl)
  (libraries 
    core
    basic_feature
    diff_algo
    merge
    )
  (preprocess (pps ppx_jane bisect_ppx))
 )


(library
  (name file_parse)
  (modules file_parse)
  (libraries 
    core)
  (preprocess (pps ppx_jane bisect_ppx))
 )

 (library
  (name diff_algo)
  (modules diff_algo)
  (libraries 
    core
    file_parse)
  (preprocess (pps ppx_jane bisect_ppx))
 )

 (library
  (name merge)
  (modules merge)
  (libraries 
    core
    diff_algo)
  (preprocess (pps ppx_jane bisect_ppx))
 )


(executable
  (name text_manipulator)
  (modules text_manipulator)
  (libraries
    file_parse
    core
    core_unix.command_unix
    str
    repl
    )
  (preprocess
    (pps ppx_jane bisect_ppx)))